# rkyv-Experiments

./: Cargo.toml  readme.md
src/: main.rs  product.rs  random_products.rs
